2006-09-29  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py (KiwiEntry.__init__): Make ProxyEntries work with
	PyGTK 2.10 again.

2006-09-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py	(Column): Document properties
	(ObjectList): Document signals and properties

2006-09-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py (Library.enable_translation)
	(Library.set_application_domain): Call locale.textdomain/
	locale.bindtextdomain aswell so libglade and other
	applications using libcs translation functions are going
	to work

=== 1.9.10 ===
2006-09-15  Johan Dahlin  <jdahlin@async.com.br>

	* Makefile: add to simplify release process
	* setup.py: install documentation

2006-09-12  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/python.py (enum): Add a new data type

	* tests/test_python.py (EnumTest): and a test

2006-09-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_tasklet.py: Add WaitForCall test.

	* kiwi/tasklet.py (WaitForCall): Add a new WaitForCall wait
	condition, for waiting for a generic callback.

	* tests/test_tasklet.py: Add a few more tests.

	* kiwi/tasklet.py (Tasklet): Better handling of the StopIteration
	exception from tasklets.  Add a new STATE_ZOMBIE state to indicate
	when a tasklet is finished.  Add a new return_value instance
	variable to hold the (surprise!) return value.  Document the
	public instance	variables and STATE_* constants.
	(Tasklet._next_round): When a tasklet sends a message, set the
	'sender' field of the message to the sending tasklet.

2006-09-11  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/views.py (_open_glade): Sniff the content of the file and
	use libglade/gazpacho when appropriate. Fall back to gazpacho since
	dtd has not always been present

2006-09-08  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/delegates.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/libgladeloader.py:
	* kiwi/ui/views.py:
	Kill gladename in views, delegates and glade adaptors
